--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
         </div>
     </main>
 
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Daniel Santillán</a>.
-    </div>
+    <footer>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="#">Daniel Santillán</a>.
+        </div>    
+    </footer>
+
 </body>
 </html>
